# heroic

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  wait-for-db.sh
.github/workflows/: build.yaml  deploy.yml  deploy_backend_dev.yml  deploy_backend_prod.yml  deploy_dev.yml  deploy_prod.yml
_playground/heroic_playground_api/: manage.py
_playground/heroic_playground_api/heroic_api/: apps.py  models.py  serializers.py
_playground/heroic_playground_api/heroic_playground_api/: asgi.py  settings.py  urls.py  wsgi.py
deploy/: .deploy-trigger  deploy-marker-dev.txt  nginx.conf  nginx.dev.conf  nginx.prod.conf
heroic_api/: admin.py  auth_backends.py  filters.py  gw_calculations.py  hopskotch.py  middleware.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py  viewsets.py  visibility.py
heroic_api/alertstream_handlers/: ingest_from_hop.py
heroic_api/migrations/: 0001_initial.py  0002_userproxy_alter_instrumentcapability_options_and_more.py  0003_alter_instrument_id_alter_instrument_name_and_more.py  0004_instrument_instrument_url_site_weather_url_and_more.py  0005_remove_telescopestatus_dec_and_more.py  0006_instrument_created_instrument_modified_and_more.py  0007_alter_instrument_id_alter_instrument_name_and_more.py  0008_instrument_footprint.py  0009_telescopepointing_field_and_more.py  0010_telescopepointing_planned_and_more.py
heroic_api/test/: test_api.py  test_visibility.py
heroic_base/: asgi.py  settings.py  task_scheduler.py  urls.py  wsgi.py
scripts/: create_dev_superuser.py  reset_database.py  setup_gw_observatories.py  setup_lco_telescope_status.py
